# dsc10-notes

./: .buildinfo  .dockerignore  .gitignore  CNAME  Makefile  README.md  flake.nix  front.html  genindex.html  glossary.html  how_to_read.html  jupyterbook-requires.nix  objects.inv  pyproject.toml  search.html  searchindex.js
.githooks/: pre-commit
01-getting_started/: data_types-bool.html  data_types-numeric.html  data_types-numeric.ipynb  data_types-strings.html  data_types-strings.ipynb  data_types.html  expressions.html  expressions.ipynb  first_steps.html  functions-defining.html  functions.html  functions.ipynb  tools.html  variables.html  variables.ipynb
02-data_sets/: accessing.html  apply.html  apply.ipynb  arrays.html  arrays.ipynb  dataframes.html  dataframes.ipynb  groupby.html  merging.html  merging.ipynb  querying.html  querying.ipynb
03-visualization/: bar.html  histogram.html  intro.html  intro.ipynb  line.html  scatter.html
04-advanced_data_manipulation/: merging.html
04-probability_and_simulation/: 1_populations_and_samples.html  2_parameters_and_statistics.html  probability_and_simulation.html  probability_and_simulation.ipynb
05-hypothesis_testing/: 1_hypothesis_tests.html  1_hypothesis_tests.ipynb  2_permutation_tests.html
05-probability_and_simulation/: probability_and_simulation.html
06-estimation/: 1_bootstrap.html  2_confidence_intervals.html  3_ht_using_intervals.html
06-populations_and_samples/: 1_populations_and_samples.html  2_parameters_and_statistics.html
07-hypothesis_testing/: 1_hypothesis_tests.html  (+1 more)
book/: front.md
(+167 files in other folders)
