[tool.poetry]
name = "dsc10-notes"
version = "0.1.0"
description = ""
authors = ["Justin Eldridge <eldridgejm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sphinx-tabs = "^3.2.0"
notebook = "^6.4.6"
babypandas = "^0.1.6"

[tool.poetry.dev-dependencies]
jupyter-book = "^0.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
